ingress/4-voteapp-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voteapp-ing
  namespace: voteapp
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vote.shananatestingdevops.xyz
    - result.shananatestingdevops.xyz
    secretName: voteapp-tls-secret  # Reference the same secret
  rules:
  - host: vote.shananatestingdevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-svc
            port:
              number: 5000
  - host: result.shananatestingdevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-svc
            port:
              number: 5001
