ingress/5-home-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ing
  namespace: home
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - shananatestingdevops.xyz
    secretName: busyqa-tls-secret  # Reference the same secret
  rules:
  - host: shananatestingdevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-svc
            port:
              number: 80
